# mauveAligner

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac  configure.in  gril_readme.txt  mauveAligner.mcp  muscle3.6-aed.patch
mauve/: genres.tex  mauve_intro.txt
procrastination/: novel.eps  proc.eps  procrastination.bib  procrastination.tex
procrastination/dataset/: AC010145-199kb.fna  AC034110-167Kb.alu  AC034110-167Kb.fna  AF435921-22Kb.fna
procrastination/results/not_sorted_by_score/: AC010145-199kb.procrast.err  AC034110-167Kb.procrast  AC034110-167Kb.procrast.err  AF435921-22Kb.procrast.err  Z15025-38Kb.procrast  Z15025-38Kb.procrast.err  homo_sapiens_chr22-1MB.procrast.err  homo_sapiens_chr22-1MB.time  scoreALU  scorer.pl
procrastinationII/: appendix.tex  darkside.bst  procrast2.tex  procrastination.bib
procrastinationII/datasets/: final_p10_i0_s0.tup  final_p10_i0_s0.xmfa  final_p10_i150_s850.alu  final_p10_i150_s850.fna  final_p10_i150_s850.xmfa  final_p10_i15_s85.xmfa  final_p10_i30_s170.alu  final_p10_i30_s170.xmfa  final_p10_i60_s340.tup  final_p10_i75_s425.alu  final_p1_i0_s0.alu  final_p1_i0_s0.tup  final_p1_i0_s0.xmfa  final_p1_i150_s850.alu  final_p1_i150_s850.tup  final_p1_i150_s850.xmfa  final_p1_i15_s85.alu  final_p1_i30_s170.tup  final_p1_i60_s340.alu  final_p1_i60_s340.fna  final_p1_i60_s340.tup  final_p1_i75_s425.alu  final_p2_i0_s0.tup  final_p2_i0_s0.xmfa  final_p2_i150_s850.xmfa  final_p2_i15_s85.alu  final_p2_i15_s85.tup  final_p2_i30_s170.alu  final_p2_i30_s170.fna  final_p2_i30_s170.xmfa  final_p2_i60_s340.alu  final_p2_i60_s340.fna  final_p2_i75_s425.alu  final_p2_i75_s425.fna  final_p2_i75_s425.xmfa  final_p3_i0_s0.alu  final_p3_i0_s0.tup  final_p3_i150_s850.alu  final_p3_i150_s850.xmfa  final_p3_i15_s85.fna  (+83 more)
procrastinationII/figures/: alu_align.eps  euler_underprediction_fig.ps  exactseeds.eps  extension.eps  extension_bw.eps  hmm.eps  hmm_bw.eps  procrast_boundary_fig.eps  procrast_result.eps  repeat_accuracy.eps  repeat_accuracy_bw.eps  repeat_accuracy_new.eps
procrastinationII/results/: euler_nt_sensitivity_final.txt  euler_scorer.pl  procrast_nt_ppv_final.txt  scoreAlignments.py
projects/: bbAnalyze.vcproj  cadena.vcproj  calculateBackboneCoverage.vcproj  calculateBackboneCoverage2.vcproj  checkForLGT.vcproj  everything.sln  extractBCITrees.vcproj  extractBackbone.vcproj  extractSubalignments.vcproj  getBreakpointRegionFeatures.vcproj  getOrthologList.vcproj  mauveAligner.vcproj  mpiMauveAligner.vcproj  mrhAnalysis.vcproj  mumAnalysis.vcproj  procrastAligner.vcproj  progressiveMauve.vcproj  rootTrees.vcproj  scoreALU.vcproj  scoreAlignment.vcproj  scoreProcrastAlignment.vcproj  sortContigs.vcproj  stripSubsetLCBs.vcproj  toEvoHighwayFormat.vcproj  toGrimmFormat.vcproj  transposeCoordinates.vcproj  unalign.vcproj  uniqueMerCount.vcproj  uniquifyTrees.vcproj
src/: Makefile.am  MatchRecord.h  MpiAligner.cpp  PairwiseMatchAdapter.h  PairwiseMatchFinder.cpp  PairwiseMatchFinder.h  ProgressiveAligner.cpp  ProgressiveAligner.h  SeedMatchEnumerator.h  SeedOccurrenceList.h  TreeUtilities.h  UniqueMatchFinder.cpp  UniqueMatchFinder.h  addUnalignedIntervals.cpp  alignmentProjector.cpp  bbAnalyze.cpp  bbBreakOnGenes.cpp  bbFilter.cpp  cadena.cpp  cadena.h  calculateBackboneCoverage.cpp  calculateBackboneCoverage2.cpp  createBackboneMFA.cpp  evd.cpp  extractBCITrees.cpp  extractBackbone2.cpp  getAlignmentWindows.cpp  getOrthologList.cpp  grilStatic  makeBadgerMatrix.cpp  mauveAligner.cpp  mauveToXMFA.cpp  memsApp.cpp  mfa2xmfa.cpp  mpiMauveAligner.cpp  multiEVD.cpp  my_getopt.h  pairCompare.cpp  procrastAligner.cpp  procrastUtilities.cpp  (+16 more)
src/bagFFT/: bagFFT-algorithm.h  bagFFT.cpp  bagFFT.h  brent.h  complex.h  convolution.h  extended_exponent.h  fft.cpp  fft.h  libfftw3-3.lib  llr_score.cpp  llr_score.h  minimize.cpp  minimize.h  mnbrak.h  poiss_prob.cpp  poiss_prob.h  theta_fns.h  utils.cpp  utils.h
tcbb/: procrastination.bib  root.tex  supp.tex
tcbb/fig/: alu_align.eps  boundary_scores.eps  boundaryresults.eps  euler_boundary_fig.eps  euler_f.eps  extension.eps  hmm.eps  procrast_boundary_fig.eps  procrast_f.eps  repeatoire_f.eps
writing/: rearrangement_example.txt  rearrangement_graph.eps
writing/mauve/: genres.bib  mauve_outline.txt  rearrangement_graph.fig
writing/procrastination/: simple.eps
writing/procrastination/dataset/: AC010145-199kb.alu  AF435921-22Kb.alu  Z15025-38Kb.alu  Z15025-38Kb.fna  homo_sapiens_chr22-1MB.alu  homo_sapiens_chr22-1MB.fna
writing/procrastinationII/: appendix.tex  procrast2.aux  procrast2.bbl  procrast2.doc  procrast2.dvi  procrast2.tex  procrast2.tex.bak  procrastination.bib  procrastination.bib.bak
writing/procrastinationII/datasets/: final_p10_i0_s0.alu  final_p10_i0_s0.fna  final_p10_i150_s850.tup  final_p10_i15_s85.alu  final_p10_i15_s85.fna  final_p10_i15_s85.tup  final_p10_i30_s170.fna  final_p10_i30_s170.tup  final_p10_i60_s340.alu  final_p10_i60_s340.fna  final_p10_i60_s340.xmfa  final_p10_i75_s425.fna  final_p10_i75_s425.tup  final_p10_i75_s425.xmfa  final_p1_i0_s0.fna  final_p1_i150_s850.fna  final_p1_i15_s85.fna  final_p1_i15_s85.tup  final_p1_i15_s85.xmfa  final_p1_i30_s170.alu  final_p1_i30_s170.fna  final_p1_i30_s170.xmfa  final_p1_i60_s340.xmfa  final_p1_i75_s425.fna  final_p1_i75_s425.tup  final_p1_i75_s425.xmfa  final_p2_i0_s0.alu  final_p2_i0_s0.fna  final_p2_i150_s850.alu  final_p2_i150_s850.fna  final_p2_i150_s850.tup  final_p2_i15_s85.fna  final_p2_i15_s85.xmfa  final_p2_i30_s170.tup  final_p2_i60_s340.tup  final_p2_i60_s340.xmfa  final_p2_i75_s425.tup  final_p3_i0_s0.fna  final_p3_i0_s0.xmfa  final_p3_i150_s850.fna  (+77 more)
writing/procrastinationII/figures/: alu_align.eps  benchmark.eps  boundary.eps  boundary_scores.eps  euler_boundary_fig.eps  euler_boundary_fig.ps  euler_overprediction_fig.ps  extension.eps  flowchart.eps  hmm.eps  procrast_boundary_fig.eps  procrast_boundary_fig.ps  procrast_overprediction_fig.ps  procrast_underprediction_fig.ps  repeat_accuracy.eps  repeat_accuracy_new.eps  string_matching.eps
(+9 files in other folders)
